--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="./index.html" class="logo">
               <span class="logo-color">Web</span>Studio
             </a>
+
             <ul class="nav-menu list">
               <li>
                 <a href="./index.html" class="nav-link current">Studio</a>
@@ -42,6 +43,12 @@
               <li><a href="" class="nav-link">Contacts</a></li>
             </ul>
           </nav>
+
+          <button type="button" class="btn-mobile js-open-menu">
+            <svg class="icon-burger" width="32" height="22">
+              <use href="./images/icons.svg#icon-burger"></use>
+            </svg>
+          </button>
 
           <address class="address">
             <ul class="contact-menu list">
@@ -59,7 +66,80 @@
           </address>
         </div>
       </div>
+
+      <div class="mob-box js-menu-container">
+        <div class="container mob-menu">
+          <button type="button" class="btn-mobil-close js-close-menu">
+            <svg class="icon-close-mob" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <nav>
+            <ul class="nav-menu-mobil list">
+              <li>
+                <a href="./index.html" class="nav-link-mobil current">Studio</a>
+              </li>
+              <li>
+                <a href="./portfolio.html" class="nav-link-mobil">Portfolio</a>
+              </li>
+              <li><a href="" class="nav-link-mobil">Contacts</a></li>
+            </ul>
+          </nav>
+
+          <div>
+            <address>
+              <ul class="contact-menu-mobil list">
+                <li class="tel-cont">
+                  <a href="tel:+110001111111" class="contact-link-mobil tel"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="contact-link-mobil mail"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="socials-list-mob list">
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
+
+    <!-- MOBIL MENU  -->
 
     <main>
       <!--hero-->
@@ -87,7 +167,7 @@
                     <use href="./images/icons.svg#icon-antenna1"></use>
                   </svg>
                 </div>
-                <h3 class="section-subtitle">Strategy</h3>
+                <h3 class="section-subtitle title-mobil">Strategy</h3>
                 <p class="section-text">
                   Our goal is to identify the Business problem to walk away with
                   the perfect and creative solution.
@@ -100,7 +180,7 @@
                     <use href="./images/icons.svg#icon-clock2"></use>
                   </svg>
                 </div>
-                <h3 class="section-subtitle">Punctuality</h3>
+                <h3 class="section-subtitle title-mobil">Punctuality</h3>
                 <p class="section-text">
                   Bring the key message to the brand's audience for the best
                   price within the shortest possible time.
@@ -113,7 +193,7 @@
                     <use href="./images/icons.svg#icon-diagram3"></use>
                   </svg>
                 </div>
-                <h3 class="section-subtitle">Diligence</h3>
+                <h3 class="section-subtitle title-mobil">Diligence</h3>
                 <p class="section-text">
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
@@ -126,7 +206,7 @@
                     <use href="./images/icons.svg#icon-astronaut4"></use>
                   </svg>
                 </div>
-                <h3 class="section-subtitle">Technologies</h3>
+                <h3 class="section-subtitle title-mobil">Technologies</h3>
                 <p class="section-text">
                   Design practice focused on digital experiences. We bring forth
                   a deep passion for problem-solving.
@@ -139,19 +219,34 @@
 
       <!-- services -->
 
-      <section class="section no-padding">
+      <section class="section container-hide no-padding">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
 
           <ul class="section-items list">
             <li class="services-item">
-              <img src="./images/img1.jpg" alt="diagram" width="360" />
+              <img
+                srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x"
+                src="./images/img1.jpg"
+                alt="diagram"
+                width="360"
+              />
             </li>
             <li class="services-item">
-              <img src="./images/img2.jpg" alt="telephone" width="360" />
+              <img
+                srcset="./images/img2.jpg 1x, ./images/img2@2x.jpg 2x"
+                src="./images/img2.jpg"
+                alt="telephone"
+                width="360"
+              />
             </li>
             <li class="services-item">
-              <img src="./images/img3.jpg" alt="telephone hand" width="360" />
+              <img
+                srcset="./images/img3.jpg 1x, ./images/img3@2x.jpg 2x"
+                src="./images/img3.jpg"
+                alt="telephone hand"
+                width="360"
+              />
             </li>
           </ul>
         </div>
@@ -160,12 +255,17 @@
       <!--team-->
 
       <section class="section team">
-        <div class="container">
+        <div class="container more-padding">
           <h2 class="section-title">Our Team</h2>
 
           <ul class="section-items list">
             <li class="team-item">
-              <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
+                src="./images/img-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
               <div class="team-card">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
@@ -204,7 +304,12 @@
             </li>
 
             <li class="team-item">
-              <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="team-card">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
@@ -242,7 +347,12 @@
             </li>
 
             <li class="team-item">
-              <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+              <img
+                srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="team-card">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
@@ -280,7 +390,12 @@
             </li>
 
             <li class="team-item">
-              <img src="./images/img.jpg" alt="Camila Garcia" width="264" />
+              <img
+                srcset="./images/img.jpg 1x, ./images/img@2x.jpg 2x"
+                src="./images/img.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="team-card">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
@@ -319,63 +434,63 @@
           </ul>
         </div>
       </section>
+      <section class="section">
+        <div class="container more-padding">
+          <h2 class="section-title">Customers</h2>
+
+          <ul class="section-items company-items list">
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="company">
+              <a href="" class="company-link">
+                <svg class="company-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
-    <section class="section">
-      <div class="container">
-        <h2 class="section-title">Customers</h2>
-
-        <ul class="section-items list">
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo1"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="company">
-            <a href="" class="company-link">
-              <svg class="company-icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-logo6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
     <!--footer-->
+
     <footer class="footer-page">
-      <div class="container footer">
+      <div class="container more-padding footer">
         <div class="footer-box">
           <a href="./index.html" class="logo">
             <span class="logo-color">Web</span
@@ -422,7 +537,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="footer-form-box">
           <h3 class="subtitle-footer">Subscribe</h3>
           <form name="subscribe" class="form-box">
             <label for="email" class="visually-hidden"> Email</label>
@@ -438,7 +553,9 @@
         </div>
       </div>
     </footer>
+
     <!--modal-->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-modal" data-modal-close>
@@ -446,7 +563,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <!---->
+
         <form name="contact-form">
           <div class="form-modal" role="group" aria-labelledby="call-back">
             <p id="call-back" class="form-title">
@@ -502,9 +619,10 @@
                   required
                 />
                 <span class="icon-check"></span>
-
-                I accept the terms and conditions of the
-                <a href="linc-privacy-policy">Privacy Policy</a>
+                <span>
+                  I accept the terms and conditions of the
+                  <a href="#">Privacy Policy</a></span
+                >
               </label>
             </div>
 
@@ -513,6 +631,9 @@
         </form>
       </div>
     </div>
+
+    <script src="./js/mobile-menu.js"></script>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
